code/web_app/prometheus-ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: prometheus-ingress
spec:
  rules:
    - host: host-172-16-113-146.nubes.stfc.ac.uk
    #- host: prometheus.piezo.ac.uk
      http:
        paths:
          - backend:
              serviceName: piezo-monitor-prometheus-o-prometheus
              servicePort: web
            path: /prometheus/
    #- host: monitoring.piezo.ac.uk
    #  http:
    #    paths:
          - backend:
              serviceName: piezo-monitor-grafana
              servicePort: service
            path: /
